@startuml class-diagram
title CodingAgent - Class Diagram
skinparam linetype ortho
skinparam classAttributeIconSize 0

package "Entry Point" {
    class "Program\n(top-level)" as Program <<static>> {
        Builds IHost
        Configures DI, Logging, Options
        Sets up System.CommandLine
        Invokes CLI parser
        --
        - {static} FindRepoRoot(startDir): string?
    }
}

package "Commands" <<Rectangle>> {
    class NewSessionCommand <<static>> {
        + {static} Create(services: IServiceProvider): Command
    }

    class ResumeCommand <<static>> {
        + {static} Create(services: IServiceProvider): Command
    }
}

package "Configuration" <<Rectangle>> {
    class AgentOptions {
        + {static} SectionName: string = "Agent"
        --
        + BasePath: string
        + WorkspaceDir: string
        + InboxDir: string
        + OutboxDir: string
        + SessionsDir: string
        + CommandTimeoutSeconds: int
        + MaxOutputLength: int
        --
        + WorkspacePath: string <<computed>>
        + InboxPath: string <<computed>>
        + OutboxPath: string <<computed>>
        + SessionsPath: string <<computed>>
        + ProcessedPath: string <<computed>>
    }
}

package "Models" <<Rectangle>> {
    class Session {
        + SessionId: string
        + Task: string
        + SequenceNumber: int
        + IsComplete: bool
        + CreatedAt: DateTime
        + UpdatedAt: DateTime
        + LastResults: List<CommandResult>
        + ReadFileRequests: List<string>
    }

    class CommandResult {
        + CommandType: string
        + Summary: string
        + Success: bool
        + Output: string
    }

    class ExecutionOutcome {
        + Results: List<CommandResult>
        + ReadFileRequests: List<string>
        + TaskComplete: bool
        + DoneMessage: string?
    }

    abstract record ParsedCommand

    record CreateFileCommand {
        + Path: string
        + Content: string
    }
    record EditFileCommand {
        + Path: string
        + StartLine: int
        + EndLine: int
        + Content: string
    }
    record DeleteFileCommand {
        + Path: string
    }
    record ReadFileCommand {
        + Path: string
    }
    record RunCommand {
        + Command: string
    }
    record MessageCommand {
        + Text: string
    }
    record DoneCommand {
        + Message: string
    }
    record ErrorCommand {
        + Error: string
    }
}

package "Services" <<Rectangle>> {
    class Agent {
        - _options: AgentOptions
        - _executor: CommandExecutor
        - _parser: CommandParser
        - _sessionStore: SessionStore
        - _outboxBuilder: OutboxBuilder
        - _logger: ILogger<Agent>
        - _session: Session
        --
        + Agent(options, executor, parser, sessionStore, outboxBuilder, logger)
        + StartNewSession(prompt: string): void
        + ResumeSession(): bool
        + Run(): void
        - WaitForInboxFile(): string?
        - FindInboxFile(): string?
        - {static} IsFileReady(path: string): bool
    }

    class CommandExecutor {
        - _workspacePath: string
        - _timeoutMs: int
        - _maxOutputLength: int
        - _logger: ILogger<CommandExecutor>
        --
        + CommandExecutor(options, logger)
        + Execute(commands: List<ParsedCommand>): ExecutionOutcome
        - ResolveSafePath(relativePath: string): string?
        - ExecuteCreateFile(cmd): CommandResult
        - ExecuteEditFile(cmd): CommandResult
        - ExecuteDeleteFile(cmd): CommandResult
        - ExecuteReadFile(cmd, outcome): CommandResult
        - ExecuteRunCommand(cmd): CommandResult
        - ExecuteMessage(cmd): CommandResult
        - TruncateOutput(output: string): string
    }

    class CommandParser {
        - {static} AttributeRegex: Regex
        --
        + Parse(text: string): List<ParsedCommand>
        - {static} ParseAttributes(tag: string): Dictionary
        - {static} CollectBody(lines, startIdx, closingTag): (string, int)
    }

    class SessionStore {
        - _sessionsDir: string
        - _logger: ILogger<SessionStore>
        - {static} JsonOptions: JsonSerializerOptions
        --
        + SessionStore(options, logger)
        + Save(session: Session): void
        + Load(sessionId: string): Session?
        + LoadLatest(): Session?
    }

    class OutboxBuilder {
        - _workspacePath: string
        --
        + OutboxBuilder(options)
        + Build(session: Session): string
    }
}

package "Infrastructure" <<Rectangle>> {
    class Protocol <<static>> {
        + {static} Version: string = "1.0"
        + {static} SectionHeader: string
        + {static} SectionProtocol: string
        + {static} SectionContext: string
        + {static} SectionPrompt: string
        + {static} Instructions: string
    }

    class PlainConsoleFormatter {
        + {static} FormatterName: string = "plain"
        + PlainConsoleFormatter(options)
        + Write(logEntry, scopeProvider, textWriter): void
    }
}

' Inheritance
CreateFileCommand --|> ParsedCommand
EditFileCommand --|> ParsedCommand
DeleteFileCommand --|> ParsedCommand
ReadFileCommand --|> ParsedCommand
RunCommand --|> ParsedCommand
MessageCommand --|> ParsedCommand
DoneCommand --|> ParsedCommand
ErrorCommand --|> ParsedCommand

' DI relationships
Program ..> NewSessionCommand : configures
Program ..> ResumeCommand : configures
Program ..> AgentOptions : registers
Program ..> PlainConsoleFormatter : registers

NewSessionCommand ..> Agent : resolves from DI
ResumeCommand ..> Agent : resolves from DI

Agent --> CommandExecutor : injected
Agent --> CommandParser : injected
Agent --> SessionStore : injected
Agent --> OutboxBuilder : injected
Agent --> Session : manages
Agent ..> "IOptions<AgentOptions>" : injected
Agent ..> "ILogger<Agent>" : injected

CommandExecutor ..> "IOptions<AgentOptions>" : injected
CommandExecutor ..> "ILogger<CommandExecutor>" : injected
CommandExecutor ..> ParsedCommand : consumes
CommandExecutor ..> ExecutionOutcome : produces
CommandExecutor ..> CommandResult : produces

SessionStore ..> "IOptions<AgentOptions>" : injected
SessionStore ..> "ILogger<SessionStore>" : injected
SessionStore ..> Session : serializes

OutboxBuilder ..> "IOptions<AgentOptions>" : injected
OutboxBuilder ..> Session : reads
OutboxBuilder ..> Protocol : reads

CommandParser ..> ParsedCommand : produces

ExecutionOutcome o-- CommandResult : contains
Session o-- CommandResult : contains

@enduml
